<resources>
    <string name="app_name">Nearby Hospitals</string>
    <string name="place_api_key">AIzaSyCLw5GP1cZR-WGMy9u9BsX1JIADxL7mg54</string>
    <string name="hospital_name">Hospital Name</string>
    <string name="hospital_address">Hospital Address</string>
    <string name="no_formal_description">No formal description</string>
    <string name="call_button">Call</string>
    <string name="ambulance_button">Ambulance</string>
    <string name="direction_button">Direction</string>
    <string name="opening_hour">Opening Hour</string>
</resources>
