<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center">
<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="15dp"
    app:cardUseCompatPadding="true">
    <LinearLayout
        android:id="@+id/dialog_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/hospital_image_dialog"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:contentDescription="@string/no_formal_description"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/hospital_name_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hospital_name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/hospital_address_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/hospital_address"/>

        <TextView
            android:id="@+id/hospital_opening_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/opening_hour"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <Button
                android:id="@+id/call_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_button"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_call"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorAccent"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/call_for_ambulance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ambulance_button"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_ambulance"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorAccent"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/hospital_direction_on_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direction_button"
                android:textStyle="bold"
                android:drawableEnd="@drawable/ic_direction"
                android:drawablePadding="5dp"
                android:drawableTint="@color/colorAccent"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>

</RelativeLayout>